--- a/index.html
+++ b/index.html
@@ -241,6 +241,15 @@
         <div section id="contact" class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <form action="http://formspree.io/amebakes@gmail.com" method="POST">
+                        Your Name: <input type="text" name="name"></br>
+                        Your Email: <input type="email" name="_replyto"></br>
+                        <input type="submit" value="Send">
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong><br>-</br>Amelia</strong>
                     </h4>
                     <p>Singapore +65</p>
