Added enquiry textbox & email subject header

--- a/index.html
+++ b/index.html
@@ -242,9 +242,14 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <form action="http://formspree.io/amebakes@gmail.com" method="POST">
-                        Your Name: <input type="text" name="name"></br>
-                        Your Email: <input type="email" name="_replyto"></br>
-                        <input type="submit" value="Send">
+                        Your Name:</br>
+                        <input type="text" name="name"></br>
+                        Your Email:</br>
+                        <input type="email" name="_replyto"></br>
+                        How can I help you:</br>
+                        <textarea name="enquiry" cols="4" rows="5"></textarea></br>
+                        <input type="hidden" name="_subject" value="New enquiry from Contact Us Website" />
+                        <input type="submit" value="Let's get in touch!">
                     </form>
                 </div>
             </div>
