--- a/index.html
+++ b/index.html
@@ -84,67 +84,60 @@
 
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
+    <section id="services" class="services">
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Our Products</h2>
                     <hr class="small">
+                    <h4>Cupcakes</h4>
+                    <hr class="small">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-heart fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Cupcakes</strong>
-                                </h4>
-                                <p>Available for customisation.</p>
-<!--                                <a href="#" class="btn btn-light">Learn More</a>-->
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-01.png">
+                                </a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-birthday-cake fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Cakes</strong>
-                                </h4>
-                                <p>Available for customisation.</p>
-<!--                                <a href="#" class="btn btn-light">Learn More</a>-->
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-02.png">
+                                </a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-coffee fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Brownies</strong>
-                                </h4>
-                                <p>Available for customisation.</p>
-<!--                                <a href="#" class="btn btn-light">Learn More</a>-->
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-03.png">
+                                </a>
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-star fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Cookies</strong>
-                                </h4>
-                                <p>Available for customisation.</p>
-<!--                                <a href="#" class="btn btn-light">Learn More</a>-->
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-04.png">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-05.png">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-06.png">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <!-- /.row (nested) -->
+<!--                    <a href="#" class="btn btn-dark">View More Items</a>-->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -222,7 +215,7 @@
     </section>
 
 <!--     Contact -->
-    <aside class="call-to-action bg-primary">
+    <aside class="call-to-action">
         <div section id="contact" class="container">
             
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -242,7 +235,7 @@
                         <textarea name="enquiry" class="form-control" rows="3" placeholder="Enquiry"></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="New enquiry from Contact Us Website" />
-                    <button type="submit" class="btn btn-info btn-lg">Submit</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                 </form>                
             </div>
         </div>
