Changed my Description

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Hello I'm Amelia!</h2>
-                    <p class="lead">Baking is like a piece of artwork. </p>
+                    <p class="lead">Baking is like a piece of artwork. blahblah </p>
                 </div>
             </div>
             <!-- /.row -->
