--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Amebakes</h1>
-            <h3>amebakes@gmail.com</h3>
+            <h1 class="txtcolour">Welcome to Amebakes!</h1>
+            <h3 class="txtcolour">amebakes@gmail.com</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -74,7 +74,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Hello I'm Amelia!</h2>
-                    <p class="lead">Baking is like a piece of artwork. blahblah </p>
+                    <p class="lead">Baking gives me strength, and bring smiles to people who tries them.<br>
+                    Now you can order my cupcakes @ <b>2 flavours - minimum 12 cupcakes!</b></p>
                 </div>
             </div>
             <!-- /.row -->
@@ -95,49 +96,39 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-01.png">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-01.png">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-02.png">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-02.png">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-03.png">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-03.png">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-04.png">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-04.png">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-05.png">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-05.png">
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-06.png">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-06.png">
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
-<!--                    <a href="#" class="btn btn-dark">View More Items</a>-->
+<!--
+                     /.row (nested) 
+                    <a href="#" class="btn btn-dark">View More Items</a>
+-->
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -163,46 +154,51 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/01.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive" title="Blueberry Lime Cupcakes" src="img/011.jpg">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/02.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive" title="Lemon Lavender Cupcakes" src="img/012.jpeg">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/03.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive" title="Chocolate Orange Cupcakes" src="img/013.jpg">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/04.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive" title="Owl-themed Cupcakes" src="img/01.jpg">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/05.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive" title="Bakesale #1 Biscuitity Affair" src="img/02.jpg">
+                            </div>
+                        </div>
+<!--
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                               <img class="img-portfolio img-responsive" src="img/03.jpg">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/06.jpg">
-                                </a>
+                                <img class="img-portfolio img-responsive" src="img/04.jpg">
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/05.jpg">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/06.jpg">
+                            </div>
+                        </div>
+-->
                     </div>
                     <!-- /.row (nested) -->
 <!--                    <a href="#" class="btn btn-dark">View More Items</a>-->
