--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
+            <img class="logo" src="img/amebakes_logo.png">
+<!--
             <h1 class="txtcolour">Welcome to Amebakes!</h1>
             <h3 class="txtcolour">amebakes@gmail.com</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+-->
         </div>
     </header>
 
@@ -94,6 +97,11 @@
                     <h4>Cupcakes</h4>
                     <hr class="small">
                     <div class="row">
+                        <div class="col-sm-12">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-11.png">
+                            </div>
+                        </div>
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-01.png">
@@ -117,6 +125,36 @@
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-05.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-07.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-08.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-09.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-10.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-12.png">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-13.png">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -154,7 +192,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <img class="img-portfolio img-responsive" title="Blueberry Lime Cupcakes" src="img/011.jpg">
+                                <img class="img-portfolio img-responsive" title="Chocolate Orange Cupcakes" src="img/013.jpg">
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -164,7 +202,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <img class="img-portfolio img-responsive" title="Chocolate Orange Cupcakes" src="img/013.jpg">
+                                <img class="img-portfolio img-responsive" title="Blueberry Lime Cupcakes" src="img/011.jpg">
                             </div>
                         </div>
                         <div class="col-md-4">
