Updated Product Information
Cupcake Prices, Cupcake Description, etc

--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Hello I'm Amelia!</h2>
-                    <p class="lead">"I am not going crazy. Promise. I just spend way too much time in the kitchen."</p>
+                    <p class="lead">Baking gives me strength, and bring smiles to people who tries them.<br>
+                    Now you can order my cupcakes @ <b>2 flavours - minimum 12 cupcakes!</b></p>
                 </div>
             </div>
             <!-- /.row -->
@@ -92,91 +93,15 @@
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Our Products</h2>
-                    <h4><b><u>Cupcakes</u></b></h4>
-                    
-                    <div>
-                        <hr class="medium">
-                        <h4><b>Classic Cupcakes</b></h4>
-                        $2.50 each<br><br>
-                        Minimum order of 6 cupcakes.<br>
-                        <i>We currently ran out of boxes of 6, hence minimum order will be 4 cupcakes per flavour!</i><br>
-                        Please choose from our flavour menu listed below.<br><br>
-                        <hr class="medium">
-                        <h4><b>Quantity &amp; Flavour Choices (in total for 1 order):</b></h4>
-                        12 cupcakes: 3 flavours<br>
-                        24 cupcakes: 4 flavours<br>
-                        36 cupcakes: 6 flavours<br>
-                        48 cupcakes: 8 flavours<br>
-                        *<b>    even quantities of flavours</b>, for e.g. 4 Oreo Choco, 4 Double Matcha, 4 Lemon Lavender<br>
-                        <i>*Request for specially customised flavours or additional flavours, e.g. 12 cupcakes, 4 flavours: Cupcakes are $3 each</i><br>
-                        <hr class="medium">
-                        <h4><b>Customised Cupcakes</b></h4>
-                        Ranges from 3D Buttercream flowers, Cartoon figures, themed cupcakes and many more.<br>
-                        Price varies from $3.50 - $4 each<br>
-                        Minimum order of 12 cupcakes.<br>
-                        <hr class="medium">
-                        <h4><b>Flavours</b></h4>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <b>Classic Vanilla</b><br>
-                                Vanilla cupcake frosted with a vanilla swiss meringue buttercream<br>
-                                *Colour of frosting can be customised, e.g. sky blue, two toned<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Vanilla Confetti</b><br>
-                                Vanilla confetti cupcake frosted with a vanilla swiss meringue buttercream sprinkled with rainbow sprinkles<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Oreo Choco</b><br>
-                                Oreo studded chocolate cupcake frosted with a Cookies &amp; Cream swiss meringue buttercream and a mini Oreo cookie on top.<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Double Chocolate</b><br>
-                                Chocolate cupcake frosted with a dark chocolate swiss meringue buttercream.<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Matcha White Choco</b><br>
-                                Green tea cupcake frosted with white chocolate swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Double Matcha</b><br>
-                                Green tea cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Biscoff Speculoos</b><br>
-                                Biscoff cupcake frosted with biscoff swiss meringue buttercream and a Biscoff cookie on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Red Velvet</b><br>
-                                Red velvet cupcake frosted with cream cheese meringue buttercream, sprinkled withh cake crumbs on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Chocolate Orange</b><br>
-                                Chocolate cupcake frosted with an orange swiss meringue buttercream and chocolate shavings, orange zest on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Lemon Rose</b><br>
-                                Lemon cupcake frosted with rosewater swiss meringue buttercream and a strawberry slice on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Lemon Lavender</b><br>
-                                Lemon cupcake frosted with two-toned lavender swiss meringue buttercream and dried lavender buds on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Earl Grey Lavender</b><br>
-                                Earl grey tea cupcake filled with earl grey white chocolate filling, frosted with two-toned lavender swiss meringue buttercream and dried lavender buds on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Blueberry Lime</b><br>
-                                Lime cupcake filled with fresh blueberry puree, frosted with lime swiss meringue buttercream and fresh blueberries, lime zest on top<br><br>
-                            </div>
-                            <div class="col-md-6">
-                                <b>Nutella Marshmallow</b><br>
-                                Nutella filled marshmallow chocolate cupcake with a Nutella swiss meringue buttercream and mini marshmallows on top<br>
+                    <hr class="small">
+                    <h4>Cupcakes</h4>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="portfolio-item">
+                                <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-11.png">
                             </div>
                         </div>
-                    </div>
-                    <hr class="medium">
                         <div class="col-md-3">
                             <div class="portfolio-item">
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-01.png">
@@ -237,9 +162,17 @@
                                 <img class="img-portfolio img-responsive" src="img/cupcakes/cupcake-06.png">
                             </div>
                         </div>
+                    </div>
+<!--
+                     /.row (nested) 
+                    <a href="#" class="btn btn-dark">View More Items</a>
+-->
                 </div>
+                <!-- /.col-lg-10 -->
             </div>
+            <!-- /.row -->
         </div>
+        <!-- /.container -->
     </section>
 
     <!-- Callout -->
