--- a/index.html
+++ b/index.html
@@ -107,8 +107,12 @@
                         24 cupcakes: 4 flavours<br>
                         36 cupcakes: 6 flavours<br>
                         48 cupcakes: 8 flavours<br>
-                        *<b>    even quantities of flavours</b>, for e.g. 4 Oreo Choco, 4 Double Matcha, 4 Lemon Lavender<br>
+                        *<b>even quantities of flavours</b>, for e.g. 4 Oreo Choco, 4 Double Matcha, 4 Lemon Lavender<br>
                         <i>*Request for specially customised flavours or additional flavours, e.g. 12 cupcakes, 4 flavours: Cupcakes are $3 each</i><br>
+                        <hr class="medium">
+                        <h4><b>Bakesales</b></h4>
+                        We launch new/current flavours for our bakesales.<br>
+                        Follow us <a href="http://instagram.com/amebakes"><b>@amebakes</b></a> on Instagram for occasional mass bakesales/flash bakesales.<br>
                         <hr class="medium">
                         <h4><b>Customised Cupcakes</b></h4>
                         Ranges from 3D Buttercream flowers, Cartoon figures, themed cupcakes and many more.<br>
@@ -148,7 +152,7 @@
                             </div>
                             <div class="col-md-6">
                                 <b>Red Velvet</b><br>
-                                Red velvet cupcake frosted with cream cheese meringue buttercream, sprinkled withh cake crumbs on top<br><br>
+                                Red velvet cupcake frosted with cream cheese meringue buttercream, sprinkled with cake crumbs on top<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Chocolate Orange</b><br>
