minimum 8 cupcakes instead of 4 cupcakes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <h4><b>Classic Cupcakes</b></h4>
                         $2.50 each<br><br>
                         Minimum order of 6 cupcakes.<br>
-                        <i>We currently ran out of boxes of 6, hence minimum order will be 4 cupcakes per flavour!</i><br>
+                        <i>We currently ran out of boxes of 6, hence minimum order will be 8 cupcakes per flavour! Thanks for understanding!</i><br>
                         Please choose from our flavour menu listed below.<br><br>
                         <hr class="medium">
                         <h4><b>Quantity &amp; Flavour Choices (in total for 1 order):</b></h4>
