Cupcakes Quantity per order

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
                         <h4><b>Quantity &amp; Flavour Choices (in total for 1 order):</b></h4>
                         12 cupcakes: 3 flavours<br>
                         24 cupcakes: 4 flavours<br>
-                        36 cupcakes: 6 flavours<br>
-                        48 cupcakes: 8 flavours<br>
+                        > 24 cupcakes: Contact me for more information :)
                         *<b>even quantities of flavours</b>, for e.g. 4 Oreo Choco, 4 Double Matcha, 4 Lemon Lavender<br>
                         <i>*Request for specially customised flavours or additional flavours, e.g. 12 cupcakes, 4 flavours: Cupcakes are $3 each</i><br>
                         <hr class="medium">
