--- a/index.html
+++ b/index.html
@@ -145,12 +145,20 @@
                                 Green tea cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
                             </div>
                             <div class="col-md-6">
+                                <b><font color="#FF4856">*New* </font>Chocolate Matcha</b><br>
+                                Chocolate cupcake frosted with green tea swiss meringue buttercream, drizzled with matcha white chocolate and a matcha KitKat on top<br><br>
+                            </div>
+                            <div class="col-md-6">
                                 <b>Biscoff Speculoos</b><br>
                                 Biscoff cupcake frosted with biscoff swiss meringue buttercream and a Biscoff cookie on top<br><br>
                             </div>
                             <div class="col-md-6">
+                                <b><font color="#FF4856">*New* </font>Chocolate Speculoos</b><br>
+                                Chocolate cupcake frosted with biscoff swiss meringue buttercream and a Biscoff cookie on top<br><br>
+                            </div>
+                            <div class="col-md-6">
                                 <b>Chocolate Orange</b><br>
-                                Chocolate cupcake frosted with an orange swiss meringue buttercream and chocolate shavings, orange zest on top<br><br>
+                                Chocolate cupcake frosted with an orange swiss meringue buttercream and chocolate shavings on top<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Lemon Rose</b><br>
@@ -162,11 +170,15 @@
                             </div>
                             <div class="col-md-6">
                                 <b>Earl Grey Lavender</b><br>
-                                Earl grey tea cupcake filled with earl grey white chocolate filling, frosted with two-toned lavender swiss meringue buttercream and dried lavender buds on top<br><br>
+                                Earl grey cupcake filled with earl grey white chocolate filling, frosted with two-toned lavender swiss meringue buttercream and dried lavender buds on top<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Blueberry Lime</b><br>
-                                Lime cupcake filled with fresh blueberry puree, frosted with lime swiss meringue buttercream and fresh blueberries, lime zest on top<br><br>
+                                Vanilla cupcake filled with fresh blueberry puree, frosted with lime swiss meringue buttercream and fresh blueberries on top<br><br>
+                            </div>
+                            <div class="col-md-6">
+                                <b><font color="#FF4856">*New* </font>Blueberry White Chocolate</b><br>
+                                Vanilla cupcake filled with fresh blueberry puree, frosted with white chocolate swiss meringue buttercream and fresh blueberries on top<br><br>
                             </div>
                             <div class="col-md-6">
                                 <b>Nutella Marshmallow</b><br>
